Fixed z-index in knowledge base modal (#10759)
* Fixed z-index in knowledge base modal

* Cleaned code

--- a/public_html/src/css/quasar.css
+++ b/public_html/src/css/quasar.css
@@ -9826,7 +9826,7 @@ body.mobile .q-tabs__arrow {
   z-index: 9500;
 }
 .z-fullscreen {
-  z-index: 6000;
+  z-index: 1032;
 }
 .z-inherit {
   z-index: inherit !important;
@@ -10026,7 +10026,7 @@ body.electron .q-electron-drag--exception {
   right: 0;
 }
 .fullscreen {
-  z-index: 6000;
+  z-index: 1032;
   border-radius: 0 !important;
   max-width: 100vw;
   max-height: 100vh;
